// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cmds:init initializes module 1`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'citext,plpgsql'
relocatable = false
superuser = false
"
`;

exports[`cmds:init initializes module: module-only - argv 1`] = `
{
  "ACCESS": "restricted",
  "LICENSE": "MIT",
  "MODULEDESC": "my-module description",
  "MODULENAME": "my-module",
  "REPONAME": "my-module-repo",
  "USEREMAIL": "ci@example.com",
  "USERFULLNAME": "CI Test User",
  "USERNAME": "ci-user",
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "extensions": [
    "plpgsql",
    "citext",
  ],
  "name": "my-module",
}
`;

exports[`cmds:init initializes module: module-only - files 1`] = `
[
  "tsconfig.json",
  "pnpm-workspace.yaml",
  "pgpm.json",
  "package.json",
  "lerna.json",
  "docker-compose.yml",
  "README.md",
  "Makefile",
  "LICENSE",
  ".prettierrc.json",
  ".gitignore",
  ".eslintrc.json",
  "packages/my-module/pgpm.plan",
  "packages/my-module/package.json",
  "packages/my-module/my-module.control",
  "packages/my-module/jest.config.js",
  "packages/my-module/README.md",
  "packages/my-module/Makefile",
  "packages/my-module/__tests__/basic.test.ts",
  "bin/install.sh",
]
`;

exports[`cmds:init initializes module: module-only - result 1`] = `
{
  "ACCESS": "restricted",
  "LICENSE": "MIT",
  "MODULEDESC": "my-module description",
  "MODULENAME": "my-module",
  "REPONAME": "my-module-repo",
  "USEREMAIL": "ci@example.com",
  "USERFULLNAME": "CI Test User",
  "USERNAME": "ci-user",
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "extensions": [
    "plpgsql",
    "citext",
  ],
  "name": "my-module",
}
`;

exports[`cmds:init initializes module: module-only - transformResults 1`] = `[]`;

exports[`cmds:init initializes module: module-only - writeResults 1`] = `[]`;

exports[`cmds:init initializes workspace: workspace - argv 1`] = `
{
  "LICENSE": "MIT",
  "MODULENAME": "my-module",
  "USEREMAIL": "ci@example.com",
  "USERFULLNAME": "CI Test User",
  "USERNAME": "ci-user",
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "name": "my-workspace",
  "workspace": true,
}
`;

exports[`cmds:init initializes workspace: workspace - files 1`] = `
[
  "my-workspace/tsconfig.json",
  "my-workspace/pnpm-workspace.yaml",
  "my-workspace/pgpm.json",
  "my-workspace/package.json",
  "my-workspace/lerna.json",
  "my-workspace/docker-compose.yml",
  "my-workspace/README.md",
  "my-workspace/Makefile",
  "my-workspace/LICENSE",
  "my-workspace/.prettierrc.json",
  "my-workspace/.gitignore",
  "my-workspace/.eslintrc.json",
  "my-workspace/bin/install.sh",
]
`;

exports[`cmds:init initializes workspace: workspace - result 1`] = `
{
  "LICENSE": "MIT",
  "MODULENAME": "my-module",
  "USEREMAIL": "ci@example.com",
  "USERFULLNAME": "CI Test User",
  "USERNAME": "ci-user",
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "name": "my-workspace",
  "workspace": true,
}
`;

exports[`cmds:init initializes workspace: workspace - transformResults 1`] = `[]`;

exports[`cmds:init initializes workspace: workspace - writeResults 1`] = `[]`;
